# Turning-Football-Articles-into-RAG-Structured-Data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/: corpus.parquet
data/processed/: Pages 30-37_p01.json  Pages 30-37_p02.json  Pages 30-37_p03.json  Pages 30-37_p04.json  Pages 30-37_p05.json  Pages 30-37_p06.json  Pages 30-37_p07.json  Pages 30-37_p08.json  Pages_19-29_p01.json  Pages_19-29_p02.json  Pages_19-29_p03.json  Pages_19-29_p04.json  Pages_19-29_p05.json  Pages_19-29_p06.json  Pages_19-29_p07.json  Pages_19-29_p08.json  Pages_19-29_p09.json  Pages_19-29_p10.json  Pages_19-29_p11.json  Pages_8-18_p01.json  Pages_8-18_p02.json  Pages_8-18_p03.json  Pages_8-18_p04.json  Pages_8-18_p05.json  Pages_8-18_p06.json  Pages_8-18_p07.json  Pages_8-18_p08.json  Pages_8-18_p09.json  Pages_8-18_p10.json  Pages_8-18_p11.json
notebooks/: 01_corpus_table.ipynb  02_tfidf.ipynb  03_lda.ipynb  CONCEPTS.md  eda_cleaning.ipynb
src/ingestion/: pdf_to_images.py  vision_llm.py
