[project]
name = "football-articles-rag"
version = "0.1.0"
description = "Turning football articles into RAG-structured data using Doc2Vec, spaCy and other NLP techniques."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
